[package]
name = "mc-viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
simple-anvil = { git = "https://github.com/nuhtan/simple-anvil.git" }
image = { version = "0.24.2", default-features = false, features = ["png"] }
bevy_egui = "0.14.0"
futures-lite = "1.12.0"

[dependencies.bevy]
version = "0.7"
default-features = false

features = [
    "bevy_winit",
    "bevy_render",
    "bevy_sprite",
    "png"
]

[target.'cfg(unix)'.dependencies.bevy]
version = "0.7"
default-features = false

features = [
    "bevy_winit",
    "bevy_render",
    "bevy_sprite",
    "png",
    "x11",
    "wayland"
]